# example-aicoding

./: REQUIREMENTS.md  TASKS.md  evaluation_report.html  pyproject.toml
data/: coding_problems.tsv
data/code_complexity/: conceptual_prompting00.py  conceptual_prompting01.py  conceptual_prompting02.py  conceptual_prompting03.py  conceptual_prompting04.py  conceptual_prompting05.py  conceptual_prompting06.py  conceptual_prompting07.py  conceptual_prompting08.py  conceptual_prompting09.py  conceptual_prompting10.py  conceptual_prompting11.py  conceptual_prompting12.py  conceptual_prompting13.py  conceptual_prompting14.py  conceptual_prompting15.py  conceptual_prompting16.py  conceptual_prompting17.py  conceptual_prompting18.py  conceptual_prompting19.py
src/aicoding/: __init__.py  evaluation_harness.py
tests/CLT/: test_solution.py
tests/DAG/: test_solution.py
tests/GES/: test_solution.py
tests/LDA/: test_solution.py
tests/PAweather/: test_solution.py
tests/PC/: test_solution.py
tests/PCA_poweriteration/: test_solution.py
tests/ascii_art/: test_solution.py
tests/bad_cv/: test_solution.py
tests/balanced_cv/: test_solution.py
tests/code_complexity/: test_solution.py
tests/corridor/: test_solution.py
tests/ddm/: test_solution.py
tests/ddm_collapsing_plot/: test_solution.py
tests/download_github_code/: test_solution.py
tests/factoranalysis/: test_solution.py
tests/hurdle/: test_solution.py
tests/imgsmooth/: test_solution.py
tests/linear_regression/: test_solution.py
tests/lmm/: test_solution.py
tests/logisticmap/: test_solution.py
(+75 files in other folders)
